Estrucuturando para nuevo estilo

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,10 +1,17 @@
 // Body
-$body-bg: #f8fafc;
+$body-bg: white;
 
 // Typography
 $font-family-sans-serif: 'Nunito', sans-serif;
 $font-size-base: 0.9rem;
 $line-height-base: 1.6;
+$main-font-color: black;
+
+// Apptitle (elpodcast)
+$app-title-font-size: 30px;
+
+// Section
+$section-font-size: 36px;
 
 // Colors
 $blue: #3490dc;
