Avance de ver mis podcasts y podcast row

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -31,6 +31,19 @@ body {
   padding: 0px;
 }
 
+/*
+.col {
+  padding: 0px;
+}
+
+.col-auto {
+  padding: 0px;
+}
+
+.row {
+  padding: 0px;
+}*/
+
 .app-title {
   font-size: $app-title-font-size;
 }
