--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10025,6 +10025,18 @@ body {
   padding: 0px;
 }
 
+/*
+.col {
+  padding: 0px;
+}
+
+.col-auto {
+  padding: 0px;
+}
+
+.row {
+  padding: 0px;
+}*/
 .app-title {
   font-size: 30px;
 }
