--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10049,6 +10049,10 @@ body {
   font-size: 36px;
 }
 
+.section-subtitle {
+  font-size: 30px;
+}
+
 .title-text {
   padding-bottom: 5px;
   font-size: 14px;
