--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,6 +56,10 @@ body {
   font-size: $section-font-size;
 }
 
+.section-subtitle {
+  font-size: 30px;
+}
+
 .title-text {
   padding-bottom: 5px;
   font-size: 14px;
