--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,7 +13,27 @@
 body {
   color: $main-font-color;
   background-color: white;
+  height: 100%;
 }
+
+/* Trick: */
+#app {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-bottom: 2.5rem;    /* Footer height */
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 80%;
+  height: 2.5rem;            /* Footer height */
+}
+
+/*============*/
 
 #app {
   padding: 0px 3%;
