--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10062,6 +10062,10 @@ footer {
   font-size: 30px;
 }
 
+.login-form {
+  width: 80%;
+}
+
 .nav-link {
   font-size: 16px;
 }
@@ -10098,4 +10102,35 @@ a {
 
 .context-item {
   padding-left: 5px;
+}
+
+.btn-fill {
+  font-size: 16px;
+  padding: 0.5em 1em;
+  color: white;
+  background-color: black;
+  border-color: transparent;
+  border-radius: 2px;
+}
+
+.btn-fill:hover {
+  color: grey;
+}
+
+.btn-outline {
+  font-size: 16px;
+  padding: 0.5em 1em;
+  color: black;
+  background-color: white;
+  border: 2px solid black;
+  border-color: black;
+  border-radius: 2px;
+}
+
+.btn-outline:hover {
+  color: grey;
+}
+
+.search-bar {
+  padding: 1.5em 1em;
 }
